update index w/ link to app flow

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </header>
          <nav>
              <ul class="nav">
-                <li><a href="index.html">App-Flow-Redesign</a></li>
+                <li><a href="https://wagneran3.github.io/app-flow-redesign/">App-Flow-Redesign</a></li>
                 <li><a href="product1.html">Bootstrap Responsive Design</a></li>
                 <li><a href="product2.html">JavaScript Coding</a></li>
                 <li><a href="policy.html">Final Project</a></li>  
